# qr-generator

./: CMakeLists.txt
hdr/: encoding.h  qr.h
src/: encoding.cc  main.cc  qr.cc  reed_solomon.cc
